<resources>
    <string name="app_name">MQTT Test App</string>
    <string name="send">Send</string>
    <string name="msg_sub_title">Enter Message</string>
    <string name="topic">Topic</string>
    <string name="title">Title</string>
    <string name="input">Input:</string>
    <string name="reject">Reject:</string>
    <string name="empty_num">%d</string>
    <string name="output">Output:</string>
</resources>